--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,21 @@ header > h1 {
   background: #8D608C;
 }
 
+.Win {
+  border: 4px solid #4dcc7d;
+  box-shadow: 0 0 10px #31b43a;
+}
+
+.Lose {
+  border: 4px solid #fc121b;
+  box-shadow: 0 0 10px #d01115;
+}
+
+.Draw {
+  border: 4px solid #464647;
+  box-shadow: 0 0 10px #25292b;
+}
+
 .Message {
   text-align: center;
   font-weight: bold;
